sort.basic.selection.AlgSelectionSort.scala.error
Erreur de compilation :
AlgSelectionSort:21: error: '(' expected but identifier found.
       if plusPetit(k, imin)
          ^