sort.basic.selection.AlgSelectionSort.scala.code
def selectionSort() {
  val n =getNombreValeurs()
  for (i<-0 to n-2)
      {imin=iMin(i,n-1);
       echange(i,imin)
    
    
    
    
  }
}





def iMin(i:Int,j:Int) 
    {var imin=i
     for (k<-i to j) {
       if plusPetit(k, imin)
           {imin=k}
     
     
     
     }
      
      
    }